--- a/deployment.yaml
+++ b/deployment.yaml
@@ -35,6 +35,29 @@ spec:
               name: mindbox-app-config
         ports:
         - containerPort: <Port>
+          protocol: TCP
+          name: http
+        # Так как мы знаем что приложение стартует 5-10 секунд
+        # мы даем ему время на инициализацию
+        # Первая проверка на готовность принимать соединения произойдет
+        # на 5 секунде старта пода, и повторится через 5 секунд после неудачи
+        # остальные поля стандартные:
+        # Количество секунд ожидания пробы (timeoutSeconds=1)
+        # Количество последовательных успешных проверок (successThreshold=1)
+        # Количество попыток (failureThreshold=3)
+        readinessProbe:
+          httpGet: 
+            path: <readinessProbe/endpoint>
+            port: http
+          initialDelaySeconds: 5
+          periodSeconds: 5 
+        # Для проверки того что приложение работает создаем livenessProbe по аналогии
+        livenessProbe:
+          httpGet: 
+            path: <livenessProbe/endpoint>
+            port: http
+          initialDelaySeconds: 5
+          periodSeconds: 5 
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
