--- a/inventory/kts/hosts.yml
+++ b/inventory/kts/hosts.yml
@@ -3,6 +3,10 @@ all:
     localnode:
       hosts:
         localhost:
+    kubernetes: 
+      hosts:
+        192.168.3.17:
   vars:
     ansible_user: ansible
     ansible_password: ansible
+    ansible_ssh_private_key_file: '/root/.ssh/id_rsa'
