--- a/roles/helm_deploy/tasks/main.yml
+++ b/roles/helm_deploy/tasks/main.yml
@@ -1,8 +1,43 @@
 ---
+- name: copy manifests
+  copy:
+    src: "files/{{ item }}"
+    dest: "~/files/{{ item }}"
+  with_items:
+    - pvpvc.yml
+    - postgresvalues.yml
+
+- name: create kube conf dir
+  file:
+    state: directory
+    path: /home/ansible/.kube
+
+- name: copy kube conf
+  template:
+    src: templates/config.j2
+    dest: /home/ansible/.kube/config
+    mode: '600'
+
+- name: use feature
+  shell:
+    cmd: export KUBECONFIG=/home/ansible/.kube/config
+
 - name:  Add bitnami repository
   kubernetes.core.helm_repository:
     name: bitnami
     repo_url: "https://charts.bitnami.com/bitnami"
+
+- name: Create namespace
+  kubernetes.core.k8s:
+    name: postgresql
+    api_version: v1
+    kind: Namespace
+    state: present
+
+- name: Create a pvc by reading the definition from a local file
+  kubernetes.core.k8s:
+    state: present
+    src: files/pvpvc.yml
 
 - name: Deploy postgres
   kubernetes.core.helm:
@@ -10,3 +45,5 @@
     chart_ref: bitnami/postgresql
     release_namespace: postgresql
     create_namespace: true
+    values_files:
+    - files/postgresvalues.yml
